--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!doctype html>
-<html lang="en">
+<html lang="es-MX">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    
+    <!-- SEO Meta Tags Esenciales -->
+    <title>Zapatería La Elegancia | Zapatos de Calidad en Chimalhuacán desde 1970</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-  <title>Zapatería La Elegancia</title>
+    <meta name="description" content="Descubre calzado de prestigio para dama, caballero, niños y ortopédico en Zapatería La Elegancia. Más de 50 años de tradición en Chimalhuacán. Compra en línea o visítanos.">
+    <meta name="keywords" content="zapateria en chimalhuacan, zapatos de piel, calzado de dama, calzado de caballero, zapatos para niño, zapateria la elegancia, comprar zapatos en linea mexico">
+    <meta name="author" content="Zapatería La Elegancia">
+    <link rel="canonical" href="https://www.zapateria-elegancia.com" /> <!-- Reemplazar con tu dominio final -->
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.zapateria-elegancia.com"> <!-- Reemplazar con tu dominio final -->
+    <meta property="og:title" content="Zapatería La Elegancia | Calidad y Estilo en Chimalhuacán">
+    <meta property="og:description" content="La tradición y el estilo se encuentran en nuestra selecta colección de calzado para toda la familia.">
+    <meta property="og:image" content="/social-preview.jpg"> <!-- Crear y añadir una imagen de 1200x630px en la carpeta /public -->
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.zapateria-elegancia.com"> <!-- Reemplazar con tu dominio final -->
+    <meta property="twitter:title" content="Zapatería La Elegancia | Calidad y Estilo en Chimalhuacán">
+    <meta property="twitter:description" content="La tradición y el estilo se encuentran en nuestra selecta colección de calzado para toda la familia.">
+    <meta property="twitter:image" content="/social-preview.jpg"> <!-- Usar la misma imagen -->
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
